--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
+    "moment": "^2.24.0",
     "qs": "^6.9.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
