--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "author": "makeconstnotvar@protonmail.com",
   "license": "ISC",
   "dependencies": {
-    "@reach/router": "^1.3.3",
     "axios": "^0.19.2",
+    "babel-plugin-inferno": "^6.1.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "inferno": "^7.4.2",
+    "inferno-mobx": "^7.4.2",
+    "inferno-router": "^7.4.2",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
-    "mobx-react": "^6.1.8",
     "moment": "^2.24.0",
     "qs": "^6.9.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
