--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "watch-js": "webpack --watch --progress",
     "watch-css": "gulp styles-watch",
-    "build": "webpack"
+    "build": "webpack",
+    "build server": "webpack --config webpack.config.server.js",
+    "rollup": "rollup -c rollup-back.js"
   },
   "keywords": [],
   "author": "makeconstnotvar@protonmail.com",
   "license": "ISC",
   "dependencies": {
     "@reach/router": "^1.3.3",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "axios": "^0.19.2",
     "compression": "^1.7.4",
-    "express": "^4.17.1",
+    "express": "~4.16.4",
     "helmet": "^3.21.3",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
@@ -24,7 +28,9 @@
     "qs": "^6.9.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "rollup": "^2.1.0",
+    "rollup-plugin-babel": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
