--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "makeconstnotvar@protonmail.com",
   "license": "ISC",
   "dependencies": {
-    "@reach/router": "^1.3.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-router-config": "^5.1.1",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "axios": "^0.19.2",
@@ -30,7 +32,9 @@
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
     "rollup": "^2.1.0",
-    "rollup-plugin-babel": "^4.4.0"
+    "rollup-plugin-babel": "^4.4.0",
+    "serve-favicon": "^2.5.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
