--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch-css": "gulp styles-watch",
     "build": "webpack",
     "build server": "webpack --config webpack.config.server.js",
-    "rollup": "rollup -c rollup-back.js"
+    "start": "node start.js"
   },
   "keywords": [],
   "author": "makeconstnotvar@protonmail.com",
@@ -17,8 +17,6 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-config": "^5.1.1",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
     "axios": "^0.19.2",
     "compression": "^1.7.4",
     "express": "~4.16.4",
@@ -31,8 +29,6 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
-    "rollup": "^2.1.0",
-    "rollup-plugin-babel": "^4.4.0",
     "serve-favicon": "^2.5.0",
     "webpack-node-externals": "^1.7.2"
   },
